# system_programming_class

./: LICENSE  main  main.c  merge_txt  merge_txt.c
assignment1/: merge_txt  merge_txt.c  merged_txt_file
assignment1/source_directory/: news1.txt  news2.txt
assignment1/test_folder/: news3.txt  test.csv
assignment2/: change_permission  change_permission.c  cptime  cptime.c  fchmod  fchmod.c  file_type_out  file_type_out.c  ftype  ftype.c  link  link.c  list1  list1.c  list2  list2.c  rlink  rlink.c  slink  slink.c  touch  touch.c  unlink  unlink.c
assignment3/: myprocess  myprocess.c
source_directory/: news2.txt  news3.txt
